--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#"><b>Home</b><span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#Home"><b>Home</b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="shoes">Shoes</a>
+                  <a class="nav-link" href="#shoes">Shoes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Backpack</a>
+                  <a class="nav-link" href="#backpack">Backpack</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" tabindex="-1">Contact</a>
+                  <a class="nav-link" href="#contactus" tabindex="-1">Contact US</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#subscribe" tabindex="-1">Subscribe</a>
                 </li>
               </ul>
             </div>
