--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
 
 
 
-    <div class="containet d-flex justify-content-center align-items-center  orenge-bg" id="subscribe">
+    <div class="container d-flex justify-content-center align-items-center  orenge-bg" id="subscribe">
       <div>
         <h3>LET'S STAY IN TOUCH</h3>
         <h6>Get update on sales, specials and more</h6>
-        <input  class="form-control" type="text">
+        <input  class="form-control" type="text"><br>
         <button class="buy-now-button">Submit</button>
       </div>
       
